compilador18/y.output
   0  $accept : programa $end

   1  programa : bloque_sentencias

   2  bloque_sentencias : bloque_sentencias sentencia_ejecutable
   3                    | bloque_sentencias sentencia_declarativa
   4                    | sentencia_ejecutable
   5                    | sentencia_declarativa

   6  bloque_control : '{' bloque_control sentencia_ejecutable '}'
   7                 | '{' sentencia_ejecutable '}'
   8                 | sentencia_ejecutable

   9  sentencia_declarativa : declaracion_variables
  10                        | funcion

  11  funcion : FUN funcion_fun
  12          | VOID funcion_void
  13          | VOID funcion_fun
  14          | FUN funcion_void

  15  funcion_fun : comienzo_funcion bloque_sentencias RETURN '(' retorno ')' ',' fin_funcion
  16              | comienzo_funcion bloque_sentencias '(' retorno ')' ',' fin_funcion
  17              | comienzo_funcion bloque_sentencias RETURN '(' error ')' ',' fin_funcion
  18              | comienzo_funcion bloque_sentencias RETURN '(' retorno ')' fin_funcion
  19              | comienzo_funcion RETURN '(' retorno ')' ',' fin_funcion

  20  funcion_void : comienzo_funcion bloque_sentencias fin_funcion
  21               | comienzo_funcion fin_funcion

  22  comienzo_funcion : ID '(' ')' '{'
  23                   | error '(' ')' '{'
  24                   | ID ')' '{'
  25                   | ID '(' '{'
  26                   | ID '(' ')' error
  27                   | ID '{'

  28  retorno : bloque_sentencias

  29  fin_funcion : '}'

  30  llamado_funcion : ID '(' ')' ','

  31  declaracion_variables : tipo lista_de_variables ','
  32                        | error lista_de_variables ','
  33                        | tipo error ','
  34                        | tipo lista_de_variables error

  35  tipo : INTEGER
  36       | LINTEGER

  37  lista_de_variables : lista_de_variables ';' ID
  38                     | ID

  39  sentencia_ejecutable : sentencia_seleccion
  40                       | sentencia_control
  41                       | sentencia_impresion
  42                       | sentencia_asignacion
  43                       | llamado_funcion

  44  sentencia_seleccion : IF condicion_IF bloque_control END_IF ','
  45                      | IF condicion_IF bloque_control ELSE bloque_control END_IF ','
  46                      | error condicion_IF bloque_control END_IF ','
  47                      | IF condicion_IF bloque_control error ','
  48                      | IF condicion_IF bloque_control END_IF error
  49                      | error condicion_IF bloque_control ELSE bloque_control END_IF ','
  50                      | IF condicion_IF bloque_control error bloque_control END_IF ','
  51                      | IF condicion_IF bloque_control ELSE bloque_control error ','
  52                      | IF condicion_IF bloque_control ELSE bloque_control END_IF error

  53  condicion_IF : '(' condicion ')'
  54               | condicion ')'
  55               | '(' condicion

  56  sentencia_control : CASE '(' ID ')' '{' lista_opciones '}' ','
  57                    | error '(' ID ')' '{' lista_opciones '}' ','
  58                    | CASE ID ')' '{' lista_opciones '}' ','
  59                    | CASE '(' error ')' '{' lista_opciones '}' ','
  60                    | CASE '(' ID '{' lista_opciones '}' ','
  61                    | CASE '(' ID ')' lista_opciones '}' ','
  62                    | CASE '(' ID ')' '{' error '}' ','
  63                    | CASE '(' ID ')' '{' lista_opciones ','
  64                    | CASE '(' ID ')' '{' lista_opciones '}' error
  65                    | CASE ID '{' lista_opciones '}' ','
  66                    | CASE '(' ID ')' lista_opciones ','

  67  lista_opciones : lista_opciones opcion
  68                 | opcion

  69  opcion : cte ':' DO bloque_control
  70         | error ':' DO bloque_control
  71         | cte DO bloque_control
  72         | cte ':' error bloque_control

  73  sentencia_impresion : PRINT '(' CADENA ')' ','
  74                      | error '(' CADENA ')' ','
  75                      | PRINT CADENA ')' ','
  76                      | PRINT '(' error ')' ','
  77                      | PRINT '(' CADENA ','
  78                      | PRINT '(' CADENA ')' error
  79                      | PRINT CADENA ','

  80  sentencia_asignacion : ID ASIGN expresiones ','
  81                       | ID ASIGN ID '(' ')' ','
  82                       | error ASIGN expresiones ','
  83                       | error ASIGN ID '(' ')' ','
  84                       | ID expresiones ','
  85                       | ID ID '(' ')' ','
  86                       | ID ASIGN expresiones error
  87                       | ID ASIGN ID '(' ')' error
  88                       | ID ASIGN error ','

  89  condicion : expresiones comparador expresiones
  90            | expresiones comparador error
  91            | error comparador expresiones
  92            | expresiones error expresiones
  93            | error

  94  comparador : '<'
  95             | '>'
  96             | '='
  97             | MENOR_IGUAL
  98             | MAYOR_IGUAL
  99             | DISTINTO

 100  expresiones : expresion
 101              | conversion_explicita

 102  conversion_explicita : tipo '(' expresion ')'
 103                       | tipo '(' error ')'
 104                       | tipo expresion ')'
 105                       | tipo '(' expresion error

 106  expresion : expresion '+' termino
 107            | expresion '-' termino
 108            | termino

 109  termino : termino '*' factor
 110          | termino '/' factor
 111          | factor

 112  factor : ID
 113         | cte

 114  cte : CTE
 115      | CTE_LARGA
 116      | '-' CTE
 117      | '-' CTE_LARGA

state 0
	$accept : . programa $end  (0)

	error  shift 1
	IF  shift 2
	PRINT  shift 3
	INTEGER  shift 4
	LINTEGER  shift 5
	CASE  shift 6
	VOID  shift 7
	FUN  shift 8
	ID  shift 9
	.  error

	programa  goto 10
	bloque_sentencias  goto 11
	sentencia_ejecutable  goto 12
	sentencia_declarativa  goto 13
	declaracion_variables  goto 14
	funcion  goto 15
	llamado_funcion  goto 16
	tipo  goto 17
	sentencia_seleccion  goto 18
	sentencia_control  goto 19
	sentencia_impresion  goto 20
	sentencia_asignacion  goto 21


state 1
	declaracion_variables : error . lista_de_variables ','  (32)
	sentencia_seleccion : error . condicion_IF bloque_control END_IF ','  (46)
	sentencia_seleccion : error . condicion_IF bloque_control ELSE bloque_control END_IF ','  (49)
	sentencia_control : error . '(' ID ')' '{' lista_opciones '}' ','  (57)
	sentencia_impresion : error . '(' CADENA ')' ','  (74)
	sentencia_asignacion : error . ASIGN expresiones ','  (82)
	sentencia_asignacion : error . ASIGN ID '(' ')' ','  (83)

	error  shift 22
	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 23
	CTE  shift 24
	CTE_LARGA  shift 25
	ASIGN  shift 26
	'-'  shift 27
	'('  shift 28
	.  error

	tipo  goto 29
	lista_de_variables  goto 30
	condicion_IF  goto 31
	condicion  goto 32
	cte  goto 33
	expresiones  goto 34
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 2
	sentencia_seleccion : IF . condicion_IF bloque_control END_IF ','  (44)
	sentencia_seleccion : IF . condicion_IF bloque_control ELSE bloque_control END_IF ','  (45)
	sentencia_seleccion : IF . condicion_IF bloque_control error ','  (47)
	sentencia_seleccion : IF . condicion_IF bloque_control END_IF error  (48)
	sentencia_seleccion : IF . condicion_IF bloque_control error bloque_control END_IF ','  (50)
	sentencia_seleccion : IF . condicion_IF bloque_control ELSE bloque_control error ','  (51)
	sentencia_seleccion : IF . condicion_IF bloque_control ELSE bloque_control END_IF error  (52)

	error  shift 22
	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	'('  shift 40
	.  error

	tipo  goto 29
	condicion_IF  goto 41
	condicion  goto 32
	cte  goto 33
	expresiones  goto 34
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 3
	sentencia_impresion : PRINT . '(' CADENA ')' ','  (73)
	sentencia_impresion : PRINT . CADENA ')' ','  (75)
	sentencia_impresion : PRINT . '(' error ')' ','  (76)
	sentencia_impresion : PRINT . '(' CADENA ','  (77)
	sentencia_impresion : PRINT . '(' CADENA ')' error  (78)
	sentencia_impresion : PRINT . CADENA ','  (79)

	CADENA  shift 42
	'('  shift 43
	.  error


state 4
	tipo : INTEGER .  (35)

	.  reduce 35


state 5
	tipo : LINTEGER .  (36)

	.  reduce 36


state 6
	sentencia_control : CASE . '(' ID ')' '{' lista_opciones '}' ','  (56)
	sentencia_control : CASE . ID ')' '{' lista_opciones '}' ','  (58)
	sentencia_control : CASE . '(' error ')' '{' lista_opciones '}' ','  (59)
	sentencia_control : CASE . '(' ID '{' lista_opciones '}' ','  (60)
	sentencia_control : CASE . '(' ID ')' lista_opciones '}' ','  (61)
	sentencia_control : CASE . '(' ID ')' '{' error '}' ','  (62)
	sentencia_control : CASE . '(' ID ')' '{' lista_opciones ','  (63)
	sentencia_control : CASE . '(' ID ')' '{' lista_opciones '}' error  (64)
	sentencia_control : CASE . ID '{' lista_opciones '}' ','  (65)
	sentencia_control : CASE . '(' ID ')' lista_opciones ','  (66)

	ID  shift 44
	'('  shift 45
	.  error


state 7
	funcion : VOID . funcion_void  (12)
	funcion : VOID . funcion_fun  (13)

	error  shift 46
	ID  shift 47
	.  error

	funcion_fun  goto 48
	funcion_void  goto 49
	comienzo_funcion  goto 50


state 8
	funcion : FUN . funcion_fun  (11)
	funcion : FUN . funcion_void  (14)

	error  shift 46
	ID  shift 47
	.  error

	funcion_fun  goto 51
	funcion_void  goto 52
	comienzo_funcion  goto 50


state 9
	llamado_funcion : ID . '(' ')' ','  (30)
	sentencia_asignacion : ID . ASIGN expresiones ','  (80)
	sentencia_asignacion : ID . ASIGN ID '(' ')' ','  (81)
	sentencia_asignacion : ID . expresiones ','  (84)
	sentencia_asignacion : ID . ID '(' ')' ','  (85)
	sentencia_asignacion : ID . ASIGN expresiones error  (86)
	sentencia_asignacion : ID . ASIGN ID '(' ')' error  (87)
	sentencia_asignacion : ID . ASIGN error ','  (88)

	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 53
	CTE  shift 24
	CTE_LARGA  shift 25
	ASIGN  shift 54
	'-'  shift 27
	'('  shift 55
	.  error

	tipo  goto 29
	cte  goto 33
	expresiones  goto 56
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 10
	$accept : programa . $end  (0)

	$end  accept


state 11
	programa : bloque_sentencias .  (1)
	bloque_sentencias : bloque_sentencias . sentencia_ejecutable  (2)
	bloque_sentencias : bloque_sentencias . sentencia_declarativa  (3)

	error  shift 1
	IF  shift 2
	PRINT  shift 3
	INTEGER  shift 4
	LINTEGER  shift 5
	CASE  shift 6
	VOID  shift 7
	FUN  shift 8
	ID  shift 9
	$end  reduce 1

	sentencia_ejecutable  goto 57
	sentencia_declarativa  goto 58
	declaracion_variables  goto 14
	funcion  goto 15
	llamado_funcion  goto 16
	tipo  goto 17
	sentencia_seleccion  goto 18
	sentencia_control  goto 19
	sentencia_impresion  goto 20
	sentencia_asignacion  goto 21


state 12
	bloque_sentencias : sentencia_ejecutable .  (4)

	.  reduce 4


state 13
	bloque_sentencias : sentencia_declarativa .  (5)

	.  reduce 5


state 14
	sentencia_declarativa : declaracion_variables .  (9)

	.  reduce 9


state 15
	sentencia_declarativa : funcion .  (10)

	.  reduce 10


state 16
	sentencia_ejecutable : llamado_funcion .  (43)

	.  reduce 43


state 17
	declaracion_variables : tipo . lista_de_variables ','  (31)
	declaracion_variables : tipo . error ','  (33)
	declaracion_variables : tipo . lista_de_variables error  (34)

	error  shift 59
	ID  shift 60
	.  error

	lista_de_variables  goto 61


state 18
	sentencia_ejecutable : sentencia_seleccion .  (39)

	.  reduce 39


state 19
	sentencia_ejecutable : sentencia_control .  (40)

	.  reduce 40


state 20
	sentencia_ejecutable : sentencia_impresion .  (41)

	.  reduce 41


state 21
	sentencia_ejecutable : sentencia_asignacion .  (42)

	.  reduce 42


state 22
	condicion : error . comparador expresiones  (91)
	condicion : error .  (93)

	MAYOR_IGUAL  shift 62
	MENOR_IGUAL  shift 63
	DISTINTO  shift 64
	'<'  shift 65
	'>'  shift 66
	'='  shift 67
	error  reduce 93
	IF  reduce 93
	PRINT  reduce 93
	CASE  reduce 93
	ID  reduce 93
	'{'  reduce 93
	')'  reduce 93

	comparador  goto 68


state 23
	lista_de_variables : ID .  (38)
	factor : ID .  (112)

	error  reduce 112
	MAYOR_IGUAL  reduce 112
	MENOR_IGUAL  reduce 112
	DISTINTO  reduce 112
	'+'  reduce 112
	'-'  reduce 112
	'*'  reduce 112
	'/'  reduce 112
	','  reduce 38
	';'  reduce 38
	'<'  reduce 112
	'>'  reduce 112
	'='  reduce 112


state 24
	cte : CTE .  (114)

	.  reduce 114


state 25
	cte : CTE_LARGA .  (115)

	.  reduce 115


state 26
	sentencia_asignacion : error ASIGN . expresiones ','  (82)
	sentencia_asignacion : error ASIGN . ID '(' ')' ','  (83)

	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 69
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	tipo  goto 29
	cte  goto 33
	expresiones  goto 70
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 27
	cte : '-' . CTE  (116)
	cte : '-' . CTE_LARGA  (117)

	CTE  shift 71
	CTE_LARGA  shift 72
	.  error


state 28
	condicion_IF : '(' . condicion ')'  (53)
	condicion_IF : '(' . condicion  (55)
	sentencia_control : error '(' . ID ')' '{' lista_opciones '}' ','  (57)
	sentencia_impresion : error '(' . CADENA ')' ','  (74)

	error  shift 22
	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 73
	CADENA  shift 74
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	tipo  goto 29
	condicion  goto 75
	cte  goto 33
	expresiones  goto 34
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 29
	conversion_explicita : tipo . '(' expresion ')'  (102)
	conversion_explicita : tipo . '(' error ')'  (103)
	conversion_explicita : tipo . expresion ')'  (104)
	conversion_explicita : tipo . '(' expresion error  (105)

	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	'('  shift 76
	.  error

	cte  goto 33
	expresion  goto 77
	termino  goto 37
	factor  goto 38


state 30
	declaracion_variables : error lista_de_variables . ','  (32)
	lista_de_variables : lista_de_variables . ';' ID  (37)

	','  shift 78
	';'  shift 79
	.  error


state 31
	sentencia_seleccion : error condicion_IF . bloque_control END_IF ','  (46)
	sentencia_seleccion : error condicion_IF . bloque_control ELSE bloque_control END_IF ','  (49)

	error  shift 80
	IF  shift 2
	PRINT  shift 3
	CASE  shift 6
	ID  shift 9
	'{'  shift 81
	.  error

	sentencia_ejecutable  goto 82
	bloque_control  goto 83
	llamado_funcion  goto 16
	sentencia_seleccion  goto 18
	sentencia_control  goto 19
	sentencia_impresion  goto 20
	sentencia_asignacion  goto 21


state 32
	condicion_IF : condicion . ')'  (54)

	')'  shift 84
	.  error


state 33
	factor : cte .  (113)

	.  reduce 113


state 34
	condicion : expresiones . comparador expresiones  (89)
	condicion : expresiones . comparador error  (90)
	condicion : expresiones . error expresiones  (92)

	error  shift 85
	MAYOR_IGUAL  shift 62
	MENOR_IGUAL  shift 63
	DISTINTO  shift 64
	'<'  shift 65
	'>'  shift 66
	'='  shift 67
	.  error

	comparador  goto 86


state 35
	expresiones : expresion .  (100)
	expresion : expresion . '+' termino  (106)
	expresion : expresion . '-' termino  (107)

	'+'  shift 87
	'-'  shift 88
	error  reduce 100
	IF  reduce 100
	PRINT  reduce 100
	CASE  reduce 100
	ID  reduce 100
	MAYOR_IGUAL  reduce 100
	MENOR_IGUAL  reduce 100
	DISTINTO  reduce 100
	'{'  reduce 100
	')'  reduce 100
	','  reduce 100
	'<'  reduce 100
	'>'  reduce 100
	'='  reduce 100


state 36
	expresiones : conversion_explicita .  (101)

	.  reduce 101


state 37
	expresion : termino .  (108)
	termino : termino . '*' factor  (109)
	termino : termino . '/' factor  (110)

	'*'  shift 89
	'/'  shift 90
	error  reduce 108
	IF  reduce 108
	PRINT  reduce 108
	CASE  reduce 108
	ID  reduce 108
	MAYOR_IGUAL  reduce 108
	MENOR_IGUAL  reduce 108
	DISTINTO  reduce 108
	'+'  reduce 108
	'-'  reduce 108
	'{'  reduce 108
	')'  reduce 108
	','  reduce 108
	'<'  reduce 108
	'>'  reduce 108
	'='  reduce 108


state 38
	termino : factor .  (111)

	.  reduce 111


state 39
	factor : ID .  (112)

	.  reduce 112


state 40
	condicion_IF : '(' . condicion ')'  (53)
	condicion_IF : '(' . condicion  (55)

	error  shift 22
	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	tipo  goto 29
	condicion  goto 75
	cte  goto 33
	expresiones  goto 34
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 41
	sentencia_seleccion : IF condicion_IF . bloque_control END_IF ','  (44)
	sentencia_seleccion : IF condicion_IF . bloque_control ELSE bloque_control END_IF ','  (45)
	sentencia_seleccion : IF condicion_IF . bloque_control error ','  (47)
	sentencia_seleccion : IF condicion_IF . bloque_control END_IF error  (48)
	sentencia_seleccion : IF condicion_IF . bloque_control error bloque_control END_IF ','  (50)
	sentencia_seleccion : IF condicion_IF . bloque_control ELSE bloque_control error ','  (51)
	sentencia_seleccion : IF condicion_IF . bloque_control ELSE bloque_control END_IF error  (52)

	error  shift 80
	IF  shift 2
	PRINT  shift 3
	CASE  shift 6
	ID  shift 9
	'{'  shift 81
	.  error

	sentencia_ejecutable  goto 82
	bloque_control  goto 91
	llamado_funcion  goto 16
	sentencia_seleccion  goto 18
	sentencia_control  goto 19
	sentencia_impresion  goto 20
	sentencia_asignacion  goto 21


state 42
	sentencia_impresion : PRINT CADENA . ')' ','  (75)
	sentencia_impresion : PRINT CADENA . ','  (79)

	')'  shift 92
	','  shift 93
	.  error


state 43
	sentencia_impresion : PRINT '(' . CADENA ')' ','  (73)
	sentencia_impresion : PRINT '(' . error ')' ','  (76)
	sentencia_impresion : PRINT '(' . CADENA ','  (77)
	sentencia_impresion : PRINT '(' . CADENA ')' error  (78)

	error  shift 94
	CADENA  shift 95
	.  error


state 44
	sentencia_control : CASE ID . ')' '{' lista_opciones '}' ','  (58)
	sentencia_control : CASE ID . '{' lista_opciones '}' ','  (65)

	'{'  shift 96
	')'  shift 97
	.  error


state 45
	sentencia_control : CASE '(' . ID ')' '{' lista_opciones '}' ','  (56)
	sentencia_control : CASE '(' . error ')' '{' lista_opciones '}' ','  (59)
	sentencia_control : CASE '(' . ID '{' lista_opciones '}' ','  (60)
	sentencia_control : CASE '(' . ID ')' lista_opciones '}' ','  (61)
	sentencia_control : CASE '(' . ID ')' '{' error '}' ','  (62)
	sentencia_control : CASE '(' . ID ')' '{' lista_opciones ','  (63)
	sentencia_control : CASE '(' . ID ')' '{' lista_opciones '}' error  (64)
	sentencia_control : CASE '(' . ID ')' lista_opciones ','  (66)

	error  shift 98
	ID  shift 99
	.  error


state 46
	comienzo_funcion : error . '(' ')' '{'  (23)

	'('  shift 100
	.  error


state 47
	comienzo_funcion : ID . '(' ')' '{'  (22)
	comienzo_funcion : ID . ')' '{'  (24)
	comienzo_funcion : ID . '(' '{'  (25)
	comienzo_funcion : ID . '(' ')' error  (26)
	comienzo_funcion : ID . '{'  (27)

	'{'  shift 101
	'('  shift 102
	')'  shift 103
	.  error


state 48
	funcion : VOID funcion_fun .  (13)

	.  reduce 13


state 49
	funcion : VOID funcion_void .  (12)

	.  reduce 12


state 50
	funcion_fun : comienzo_funcion . bloque_sentencias RETURN '(' retorno ')' ',' fin_funcion  (15)
	funcion_fun : comienzo_funcion . bloque_sentencias '(' retorno ')' ',' fin_funcion  (16)
	funcion_fun : comienzo_funcion . bloque_sentencias RETURN '(' error ')' ',' fin_funcion  (17)
	funcion_fun : comienzo_funcion . bloque_sentencias RETURN '(' retorno ')' fin_funcion  (18)
	funcion_fun : comienzo_funcion . RETURN '(' retorno ')' ',' fin_funcion  (19)
	funcion_void : comienzo_funcion . bloque_sentencias fin_funcion  (20)
	funcion_void : comienzo_funcion . fin_funcion  (21)

	error  shift 1
	IF  shift 2
	PRINT  shift 3
	INTEGER  shift 4
	LINTEGER  shift 5
	CASE  shift 6
	VOID  shift 7
	FUN  shift 8
	RETURN  shift 104
	ID  shift 9
	'}'  shift 105
	.  error

	bloque_sentencias  goto 106
	sentencia_ejecutable  goto 12
	sentencia_declarativa  goto 13
	declaracion_variables  goto 14
	funcion  goto 15
	fin_funcion  goto 107
	llamado_funcion  goto 16
	tipo  goto 17
	sentencia_seleccion  goto 18
	sentencia_control  goto 19
	sentencia_impresion  goto 20
	sentencia_asignacion  goto 21


state 51
	funcion : FUN funcion_fun .  (11)

	.  reduce 11


state 52
	funcion : FUN funcion_void .  (14)

	.  reduce 14


state 53
	sentencia_asignacion : ID ID . '(' ')' ','  (85)
	factor : ID .  (112)

	'('  shift 108
	'+'  reduce 112
	'-'  reduce 112
	'*'  reduce 112
	'/'  reduce 112
	','  reduce 112


state 54
	sentencia_asignacion : ID ASIGN . expresiones ','  (80)
	sentencia_asignacion : ID ASIGN . ID '(' ')' ','  (81)
	sentencia_asignacion : ID ASIGN . expresiones error  (86)
	sentencia_asignacion : ID ASIGN . ID '(' ')' error  (87)
	sentencia_asignacion : ID ASIGN . error ','  (88)

	error  shift 109
	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 110
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	tipo  goto 29
	cte  goto 33
	expresiones  goto 111
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 55
	llamado_funcion : ID '(' . ')' ','  (30)

	')'  shift 112
	.  error


state 56
	sentencia_asignacion : ID expresiones . ','  (84)

	','  shift 113
	.  error


state 57
	bloque_sentencias : bloque_sentencias sentencia_ejecutable .  (2)

	.  reduce 2


state 58
	bloque_sentencias : bloque_sentencias sentencia_declarativa .  (3)

	.  reduce 3


state 59
	declaracion_variables : tipo error . ','  (33)

	','  shift 114
	.  error


state 60
	lista_de_variables : ID .  (38)

	.  reduce 38


state 61
	declaracion_variables : tipo lista_de_variables . ','  (31)
	declaracion_variables : tipo lista_de_variables . error  (34)
	lista_de_variables : lista_de_variables . ';' ID  (37)

	error  shift 115
	','  shift 116
	';'  shift 79
	.  error


state 62
	comparador : MAYOR_IGUAL .  (98)

	.  reduce 98


state 63
	comparador : MENOR_IGUAL .  (97)

	.  reduce 97


state 64
	comparador : DISTINTO .  (99)

	.  reduce 99


state 65
	comparador : '<' .  (94)

	.  reduce 94


state 66
	comparador : '>' .  (95)

	.  reduce 95


state 67
	comparador : '=' .  (96)

	.  reduce 96


state 68
	condicion : error comparador . expresiones  (91)

	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	tipo  goto 29
	cte  goto 33
	expresiones  goto 117
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 69
	sentencia_asignacion : error ASIGN ID . '(' ')' ','  (83)
	factor : ID .  (112)

	'('  shift 118
	'+'  reduce 112
	'-'  reduce 112
	'*'  reduce 112
	'/'  reduce 112
	','  reduce 112


state 70
	sentencia_asignacion : error ASIGN expresiones . ','  (82)

	','  shift 119
	.  error


state 71
	cte : '-' CTE .  (116)

	.  reduce 116


state 72
	cte : '-' CTE_LARGA .  (117)

	.  reduce 117


state 73
	sentencia_control : error '(' ID . ')' '{' lista_opciones '}' ','  (57)
	factor : ID .  (112)

	')'  shift 120
	error  reduce 112
	MAYOR_IGUAL  reduce 112
	MENOR_IGUAL  reduce 112
	DISTINTO  reduce 112
	'+'  reduce 112
	'-'  reduce 112
	'*'  reduce 112
	'/'  reduce 112
	'<'  reduce 112
	'>'  reduce 112
	'='  reduce 112


state 74
	sentencia_impresion : error '(' CADENA . ')' ','  (74)

	')'  shift 121
	.  error


state 75
	condicion_IF : '(' condicion . ')'  (53)
	condicion_IF : '(' condicion .  (55)

	')'  shift 122
	error  reduce 55
	IF  reduce 55
	PRINT  reduce 55
	CASE  reduce 55
	ID  reduce 55
	'{'  reduce 55


state 76
	conversion_explicita : tipo '(' . expresion ')'  (102)
	conversion_explicita : tipo '(' . error ')'  (103)
	conversion_explicita : tipo '(' . expresion error  (105)

	error  shift 123
	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	cte  goto 33
	expresion  goto 124
	termino  goto 37
	factor  goto 38


state 77
	conversion_explicita : tipo expresion . ')'  (104)
	expresion : expresion . '+' termino  (106)
	expresion : expresion . '-' termino  (107)

	'+'  shift 87
	'-'  shift 88
	')'  shift 125
	.  error


state 78
	declaracion_variables : error lista_de_variables ',' .  (32)

	.  reduce 32


state 79
	lista_de_variables : lista_de_variables ';' . ID  (37)

	ID  shift 126
	.  error


state 80
	sentencia_seleccion : error . condicion_IF bloque_control END_IF ','  (46)
	sentencia_seleccion : error . condicion_IF bloque_control ELSE bloque_control END_IF ','  (49)
	sentencia_control : error . '(' ID ')' '{' lista_opciones '}' ','  (57)
	sentencia_impresion : error . '(' CADENA ')' ','  (74)
	sentencia_asignacion : error . ASIGN expresiones ','  (82)
	sentencia_asignacion : error . ASIGN ID '(' ')' ','  (83)

	error  shift 22
	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	ASIGN  shift 26
	'-'  shift 27
	'('  shift 28
	.  error

	tipo  goto 29
	condicion_IF  goto 31
	condicion  goto 32
	cte  goto 33
	expresiones  goto 34
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 81
	bloque_control : '{' . bloque_control sentencia_ejecutable '}'  (6)
	bloque_control : '{' . sentencia_ejecutable '}'  (7)

	error  shift 80
	IF  shift 2
	PRINT  shift 3
	CASE  shift 6
	ID  shift 9
	'{'  shift 81
	.  error

	sentencia_ejecutable  goto 127
	bloque_control  goto 128
	llamado_funcion  goto 16
	sentencia_seleccion  goto 18
	sentencia_control  goto 19
	sentencia_impresion  goto 20
	sentencia_asignacion  goto 21


state 82
	bloque_control : sentencia_ejecutable .  (8)

	.  reduce 8


state 83
	sentencia_seleccion : error condicion_IF bloque_control . END_IF ','  (46)
	sentencia_seleccion : error condicion_IF bloque_control . ELSE bloque_control END_IF ','  (49)

	ELSE  shift 129
	END_IF  shift 130
	.  error


state 84
	condicion_IF : condicion ')' .  (54)

	.  reduce 54


state 85
	condicion : expresiones error . expresiones  (92)

	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	tipo  goto 29
	cte  goto 33
	expresiones  goto 131
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 86
	condicion : expresiones comparador . expresiones  (89)
	condicion : expresiones comparador . error  (90)

	error  shift 132
	INTEGER  shift 4
	LINTEGER  shift 5
	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	tipo  goto 29
	cte  goto 33
	expresiones  goto 133
	expresion  goto 35
	conversion_explicita  goto 36
	termino  goto 37
	factor  goto 38


state 87
	expresion : expresion '+' . termino  (106)

	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	cte  goto 33
	termino  goto 134
	factor  goto 38


state 88
	expresion : expresion '-' . termino  (107)

	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	cte  goto 33
	termino  goto 135
	factor  goto 38


state 89
	termino : termino '*' . factor  (109)

	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	cte  goto 33
	factor  goto 136


state 90
	termino : termino '/' . factor  (110)

	ID  shift 39
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	cte  goto 33
	factor  goto 137


state 91
	sentencia_seleccion : IF condicion_IF bloque_control . END_IF ','  (44)
	sentencia_seleccion : IF condicion_IF bloque_control . ELSE bloque_control END_IF ','  (45)
	sentencia_seleccion : IF condicion_IF bloque_control . error ','  (47)
	sentencia_seleccion : IF condicion_IF bloque_control . END_IF error  (48)
	sentencia_seleccion : IF condicion_IF bloque_control . error bloque_control END_IF ','  (50)
	sentencia_seleccion : IF condicion_IF bloque_control . ELSE bloque_control error ','  (51)
	sentencia_seleccion : IF condicion_IF bloque_control . ELSE bloque_control END_IF error  (52)

	error  shift 138
	ELSE  shift 139
	END_IF  shift 140
	.  error


state 92
	sentencia_impresion : PRINT CADENA ')' . ','  (75)

	','  shift 141
	.  error


state 93
	sentencia_impresion : PRINT CADENA ',' .  (79)

	.  reduce 79


state 94
	sentencia_impresion : PRINT '(' error . ')' ','  (76)

	')'  shift 142
	.  error


state 95
	sentencia_impresion : PRINT '(' CADENA . ')' ','  (73)
	sentencia_impresion : PRINT '(' CADENA . ','  (77)
	sentencia_impresion : PRINT '(' CADENA . ')' error  (78)

	')'  shift 143
	','  shift 144
	.  error


state 96
	sentencia_control : CASE ID '{' . lista_opciones '}' ','  (65)

	error  shift 145
	CTE  shift 24
	CTE_LARGA  shift 25
	'-'  shift 27
	.  error

	lista_opciones  goto 146
	opcion  goto 147
	cte  goto 148

